Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2803

TCP_DEFER_ACCEPT not supported with domain sockets

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9.2
    • 0.9.3
    • C++ - Library
    • None
    • Patch Available

    Description

      After applying the fix from THRIFT-2792, the code does no longer work with domain sockets:

      $ ./TestServer --domain-socket=/tmp/ThriftTest.thrift 
      Starting "simple" server (buffered/binary) listen on: /tmp/ThriftTest.thrift
      Thrift: Wed Nov  5 21:54:07 2014 TServerSocket::listen() setsockopt() TCP_DEFER_ACCEPT Operation not supported
      terminate called after throwing an instance of 'apache::thrift::transport::TTransportException'
        what():  Could not set TCP_DEFER_ACCEPT: Operation not supported
      

      Thanks to roger.meier who pointed this out.

      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: